# Library_rs

./: .gitignore  Cargo.toml  LICENSE  README.md  books.yaml  genres.yaml  readers  readers.yaml  readme  run.bat
src/: book.rs  change_menu.rs  lib.rs  main.rs  reader.rs
src/actions/: book.rs  book_actions.rs  genres.rs  giveaway.rs  mod.rs  read.rs  read_actions.rs  reader_table.rs  tables.rs
src/actions/book/: add_rem.rs  change.rs  info.rs  mod.rs  utils.rs
src/actions/book/add_rem/: full.rs  simple.rs
src/actions/book/change/: full.rs  mod.rs  simple.rs
src/actions/book/info/: full.rs  simple.rs
src/actions/genres/: full.rs  simple.rs
src/actions/giveaway/: full.rs  simple.rs
src/actions/read/: add_rem.rs  change.rs  info.rs  utils.rs
src/actions/read/add_rem/: full.rs  simple.rs
src/actions/read/change/: full.rs  simple.rs
src/actions/read/info/: full.rs  mod.rs  simple.rs
src/books/: book.rs  book_sys.rs  date.rs  genres.rs  mod.rs  the_book.rs
src/change/: input1.rs  input2.rs  input3.rs  input4.rs  mod.rs
src/gui/: change_menu.rs  message_dialog.rs  mod.rs
src/reading/: mod.rs  read_base.rs  reader.rs
src/restore/: caretaker.rs  memento.rs  mod.rs
src/tests/: book_test.rs  mod.rs  reader_test.rs
src/utils/: books.yaml  genres.yaml  readers.yaml
