[package]
name = "booklibrs"
version = "1.1.4"
authors = ["Paranid5 <dinaraparanid@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "Book libarary project including giveaway operations and gui interface."
homepage = "https://github.com/dinaraparanid/Library_rs"
documentation = "https://docs.rs/binartree/1.1.4/booklibrs/"

[dependencies]
chrono = "0.4.19"
fltk = { version = "^0.15", git = "https://github.com/MoAlyousef/fltk-rs" }
fltk-calendar = "0.1.2"
yaml-rust = "0.4.5"